Assertion assert(end >= start) failed during nightly testing on solaris

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • gc
    • b59
    • generic
    • solaris
    • Not verified

        This assertion was triggered on both solaris-x86_64 and solaris-sparcv9
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/memRegion.hpp:55
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (src/share/vm/memory/memRegion.hpp:55), pid=6711, tid=46
        # assert(end >= start) failed: incorrect constructor arguments
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b114) (build 1.8.0-ea-fastdebug-b114)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (25.0-b58-internal-201311022012.amurillo.hs25-b58-gc-sync-fastdebug mixed mode solaris-sparc compressed oops)
        # Core dump written. Default location: core or core.6711
        #
        # An error report file with more information is saved as:
        # hs_err_pid6711.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

              Assignee:
              Stefan Johansson
              Reporter:
              Stefan Johansson
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: