8027960: Assertion assert(end >= start) failed during nightly testing on solaris

Needed to update _space_alignment in generation sizer to ensure correct sizing of spaces.

Reviewed-by: jmasa, tschatzl